[package]
name = "test-stream-api-server"
version = "0.1.0"
authors = ["Didy KUPANHY <d.kupanhy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.7.0", features = ["unstable"] }
futures = "0.3"
async-tungstenite = "0.10.0"

log = "0.4.0"
env_logger = "0.8.1"

serde_json = "1.0"
